RESOLVED FIXED193922
REGRESSION (r240498): Storage Access API prompts result is not remembered
https://bugs.webkit.org/show_bug.cgi?id=193922
Summary REGRESSION (r240498): Storage Access API prompts result is not remembered
Brent Fulgham
Reported 2019-01-28 13:28:30 PST
Accepting a Storage Access API dialog request is supposed to be remembered for a period of 30 browser use days. The changes in r240498 broke this 'memory' causing the prompt to fire each time.
Attachments
Patch (5.55 KB, patch)
2019-01-28 13:53 PST, Brent Fulgham
cdumez: review+
Radar WebKit Bug Importer
Comment 1 2019-01-28 13:35:48 PST
Brent Fulgham
Comment 2 2019-01-28 13:53:53 PST
Brent Fulgham
Comment 3 2019-01-28 14:34:28 PST
Note You need to log in before you can comment on or make changes to this bug.